--- a/style/style.scss
+++ b/style/style.scss
@@ -34,9 +34,15 @@
 #project {
   background-image: url(../image/projectBackground.jpg);
 }
-#kriging {
+
+#rainfall {
   display: flex;
+  #map {
+    width: 100%;
+    top: 60px;
+  }
 }
+
 #recruit {
   background-image: url(../image/recruitBackground.jpg);
 }
@@ -48,6 +54,22 @@
   width: 2rem;
 }
 
-#map {
-  width: 100%;
+.star {
+  font-size: 1rem;
+  font-weight: bold;
+}
+
+.easy-button-button.disabled {
+  display: none;
+}
+
+.my-div-icon {
+  size: 2rem;
+  background: rgb(0, 4, 255);
+  border: 2px solid rgba(0, 0, 0, 0.575);
+  color: rgb(255, 0, 0);
+  font-weight: bold;
+  text-align: center;
+  border-radius: 50%;
+  line-height: 30px;
 }
